updated helm chart and value file

--- a/templates/service-account.yaml
+++ b/templates/service-account.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.serviceAccount.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -9,3 +10,4 @@ metadata:
   annotations:
     eks.amazonaws.com/role-arn: {{ .Values.serviceAccount.iamRole }}
     meta.helm.sh/release-namespace: {{ .Values.Namespace }}
+{{- end}}
