resolved linting issues

--- a/Services/templates/pvc.yaml
+++ b/Services/templates/pvc.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: {{ .Values.appname }}-pvc
-  namespace: {{ .Values.namespace. }}
+  namespace: {{ .Values.namespace }}
   labels:
     app.kubernetes.io/name: {{ .Values.appname }}
   annotations:
