--- a/Services/templates/externalsecrets.yaml
+++ b/Services/templates/externalsecrets.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.ExternalSecret.enabled }}
+{{- if .Values.externalSecret.enabled }}
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
